@@ -7,14 +7,15 @@ par.tol<-1e-6
 
 context("Mexico pantropical dolphin data")
 
+# load the Gulf of Mexico dolphin data
+data(mexdolphins)
+
+# fit a detection function and look at the summary
+hn.model <- ds(mexdolphins$distdata, max(mexdolphins$distdata$distance),
+               adjustment = NULL)
+
 test_that("Do we get the same results?",{
 
-  # load the Gulf of Mexico dolphin data
-  data(mexdolphins)
-
-  # fit a detection function and look at the summary
-  hn.model <- ds(mexdolphins$distdata, max(mexdolphins$distdata$distance),
-                 adjustment = NULL)
 
   ddf.par <- 8.626542
   names(hn.model$ddf$par) <- NULL
@@ -22,7 +23,7 @@ test_that("Do we get the same results?",{
 
   # fit a simple smooth of x and y
   mod1<-dsm(N~s(x,y), hn.model, mexdolphins$segdata, mexdolphins$obsdata)
-  summary(mod1)
+  #summary(mod1)
 
 
   expect_that(mod1$gcv.ubre, equals(42.98519,tolerance=par.tol))
@@ -30,4 +31,30 @@ test_that("Do we get the same results?",{
 
   expect_that(dsm.cor(mod1,resid.type="d",max.lag=9),
               throws_error("No column called Segment.Label in data"))
+})
+
+test_that("Density weighting",{
+
+  # fit density model
+  mod1 <- dsm(D~s(x,y), hn.model, mexdolphins$segdata, mexdolphins$obsdata)
+
+  # compare when we set the weights
+  mod1.w <- dsm(D~s(x,y), hn.model, mexdolphins$segdata, mexdolphins$obsdata,
+                weights=mod1$data$segment.area)
+
+  expect_equal(fitted(mod1),fitted(mod1.w))
+
+
+  # setting weights to 1 or another constant
+  # compare when we set the weights
+  mod1.w1 <- dsm(D~s(x,y), hn.model, mexdolphins$segdata, mexdolphins$obsdata,
+                weights=rep(1,nrow(mexdolphins$segdata)))
+  # compare when we set the weights
+  mod1.w2 <- dsm(D~s(x,y), hn.model, mexdolphins$segdata, mexdolphins$obsdata,
+                weights=rep(100,nrow(mexdolphins$segdata)))
+
+  expect_equal(fitted(mod1.w1),fitted(mod1.w2))
+
+
+
 })
